# ConcurrencyTheory

Task1/: CMakeLists.txt  makefile  readme.txt
task1/: main.cpp
task2/2.1/: CMakeLists.txt  readme.txt
task2/2.1/source/: main.c
task2/2.2/: CMakeLists.txt  readme.txt
task2/2.2/source/: main.c
task2/2.3/: CMakeLists.txt  readme.txt
task2/2.3/source/: individual_region.cpp  single_region.cpp
task3/task3.1/: CMakeLists.txt  main.cpp
task3/task3.2/: CMakeLists.txt  main.cpp
task4/: main.py
task4/logs/: log.txt
task5/: main.py
task6/: CMakeLists.txt  Readme.md  kal  main.cpp
task6_/: CMakeLists.txt  main.cpp
task7/: Readme.md  main.cpp
